[tool.poetry]
name = "pyrecipe"
version = "0.0.0"
description = "A Cookbook made with Python"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.6"
mongoengine = "^0.16.3"
flask = "^1.0"
reportlab = "^3.5"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.6"
pytest-mock = "^1.10"
black = "=18.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
